// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JsonEditorActionBarBtn /> should render with icon only when used with iconOnly prop: <JsonEditorActionBarBtn iconOnly/> 1`] = `
<div>
  <button
    aria-label="action btn"
    class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors dark:focus-visible:ring-gray-300 disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 dark:hover:bg-gray-800 dark:hover:text-gray-50 hover:bg-gray-100 hover:text-gray-900 h-8 rounded-md px-3 text-xs"
    data-state="closed"
    role="button"
  >
    <svg
      class="tabler-icon tabler-icon-wand mr-1"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 21l15 -15l-3 -3l-15 15l3 3"
      />
      <path
        d="M15 6l3 3"
      />
      <path
        d="M9 3a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
      />
      <path
        d="M19 13a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
      />
    </svg>
  </button>
</div>
`;

exports[`<JsonEditorActionBarBtn /> should render: <JsonEditorActionBarBtn /> 1`] = `
<div>
  <button
    aria-label="action btn"
    class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors dark:focus-visible:ring-gray-300 disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 dark:hover:bg-gray-800 dark:hover:text-gray-50 hover:bg-gray-100 hover:text-gray-900 h-8 rounded-md px-3 text-xs"
    data-state="closed"
    role="button"
  >
    <svg
      class="tabler-icon tabler-icon-wand mr-1"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 21l15 -15l-3 -3l-15 15l3 3"
      />
      <path
        d="M15 6l3 3"
      />
      <path
        d="M9 3a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
      />
      <path
        d="M19 13a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
      />
    </svg>
    action btn
  </button>
</div>
`;
